# ob-project-empty

./: .gitlab-ci.yml  README.md  azure-pipelines.yml  obproject.toml  project_spec.json  pyproject.toml
.github/workflows/: deploy.yml
flows/test/: flow.py
